--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
     <script defer src="js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Barlow">
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Fraunces">
     <link rel="shortcut icon" href="images/ACCamerahh.jpg" type="image/x-icon">
     <title>sunnysideagency</title>
 </head>
 <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary pb-0">
-            <div class="container-fluid pt-3 pb-3"  style="background-color: #3ebffe;">
+            <div class="container-fluid pt-3 pb-3"  style="background-color: #4ac8fb;">
               <a class="navbar-brand text-white fw-bolder fs-6" href="#">sunnyside</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -33,8 +35,10 @@
             </div>
           </nav>
 
-          <div class="container-fluid d-flex flex-column justify-content-center align-items-center " style="background-color: #3ebffe;">
-            <h1 class="text-center" style="margin: 20px 0 -98px 0; z-index: 1; font-family: Barlow('https://fonts.google.com/specimen/Barlow'); font-size: 18px; font-weight: 600px;">We Are Creative</h1>
+    
+
+          <div class="container-fluid d-flex flex-column justify-content-center align-items-center " style="background-color: #4ac8fb;">
+            <h1 class="text-center" style="margin: 20px 0 -98px 0; z-index: 1; font-family: fraunces; font-size: 18px; font-weight: 600;">We Are Creative</h1>
             <img src="images/images/desktop/image-header.jpg" class="img-fluid" style="max-height: 800px; min-height: 250px; max-width: 100vw; min-width: 100%;" alt="">
           </div>
 
@@ -145,7 +149,7 @@
       <img src="images/images/desktop/image-gallery-sugarcubes.jpg" class="col img-fluid" alt="">
     </div>
 
-    <div class="container-fluid text-center bg-info">
+    <div class="container-fluid text-center" style="background-color: #90d4c5;">
       <h3 style="padding: 60px 0 30px 0;">sunnyside</h3>
       <ul class="d-flex list-unstyled justify-content-evenly p-5" >
         <li>About</li>
